--- a/templates/_includes/javascript/bootstrap/tether.js.html
+++ b/templates/_includes/javascript/bootstrap/tether.js.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-/*! tether 1.3.2 */
+/* tether 1.3.2 */
 
 (function(root, factory) {
   if (typeof define === 'function' && define.amd) {
