--- a/templates/_sass/bootstrap/bootstrap.scss
+++ b/templates/_sass/bootstrap/bootstrap.scss
@@ -1,4 +1,4 @@
-/*!
+/*
  * Bootstrap v4.0.0-alpha.2 (http://getbootstrap.com)
  * Copyright 2011-2016 The Bootstrap Authors
  * Copyright 2011-2016 Twitter, Inc.
