--- a/templates/css/main.scss
+++ b/templates/css/main.scss
@@ -77,6 +77,7 @@ $spacers: (
 
 // Import external librairies
 @import "bootstrap/bootstrap";
+// end-extlib 
 
 //Import our own files
 @import "zee/override-bootstrap";
