--- a/templates/_sass/theme.scss
+++ b/templates/_sass/theme.scss
@@ -1,3 +1,3 @@
 $headings-font-family:     "Roboto Condensed", sans-serif;
 $font-family-base:         "Roboto", sans-serif;
-$brand-primary:            #03A9F4;
+$brand-primary:             #6b15a1;
