--- a/templates/css/main.scss
+++ b/templates/css/main.scss
@@ -13,7 +13,14 @@ $enable-flex:               true;
 $enable-shadows:            false;
 $enable-transitions:        true;
 
+/* Theme-related values here
+–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
+@import "{{site.baseurl}}/fonts/fonts.css";
+@import "theme";
 
+/* Changing a few default of Bootstrap 4
+–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
+$font-size-base: 1.1rem
 
 $spacer:                     1rem;
 $spacer-x:                   $spacer;
