--- a/templates/css/main.scss
+++ b/templates/css/main.scss
@@ -20,7 +20,7 @@ $enable-transitions:        true;
 
 /* Changing a few default of Bootstrap 4
 –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––– */
-$font-size-base: 1.1rem
+$font-size-base: 1.1rem;
 
 $spacer:                     1rem;
 $spacer-x:                   $spacer;
