--- a/templates/_includes/html/zee/separator1.html
+++ b/templates/_includes/html/zee/separator1.html
@@ -1,12 +1,9 @@
 
-
-<div class="separator1">
+<div class="separator0">
   <div class="container">
     <div class="row">
       <div class="col-xs-4 offset-xs-4">
-        <div class="separator1__line">
-          <div class="mask"></div>
-        </div>
+        <div class="separator0__line"></div>
       </div><!-- ./col -->
     </div><!-- ./row -->
   </div><!-- ./container -->
