--- a/templates/_includes/html/zee/separator2.html
+++ b/templates/_includes/html/zee/separator2.html
@@ -1,9 +1,11 @@
 
-<div class="separator2">
+
+<div class="separator1">
   <div class="container">
     <div class="row">
-      <div class="col-xs-2 offset-xs-5">
-        <div class="separator2__line">
+      <div class="col-xs-4 offset-xs-4">
+        <div class="separator1__line">
+          <div class="mask"></div>
         </div>
       </div><!-- ./col -->
     </div><!-- ./row -->
