--- a/templates/_includes/html/zee/separator3.html
+++ b/templates/_includes/html/zee/separator3.html
@@ -1,9 +1,10 @@
 
-<div class="separator0">
+<div class="separator2">
   <div class="container">
     <div class="row">
-      <div class="col-xs-4 offset-xs-4">
-        <div class="separator0__line"></div>
+      <div class="col-xs-2 offset-xs-5">
+        <div class="separator2__line">
+        </div>
       </div><!-- ./col -->
     </div><!-- ./row -->
   </div><!-- ./container -->
