crisp & ga & favicon

--- a/templates/css/main.scss
+++ b/templates/css/main.scss
@@ -55,4 +55,9 @@ $spacers: (
 @import "zee/override-bootstrap";
 @import "zee/utilities";
 
+{% if site.zee_crisp_im %}
+@import "zee/crisp";
+{% endif %}
+
+
 //Import SCSS of sections here
