--- a/templates/_layouts/default.html
+++ b/templates/_layouts/default.html
@@ -10,12 +10,12 @@
     </main>
 
     <!--startjs-->
-      <!--start-ext-lib-->
       {% include javascript/bootstrap/jquery.js.html %}
       {% include javascript/bootstrap/holder.js.html %} 
       {% include javascript/bootstrap/tether.js.html %} 
       {% include javascript/bootstrap/bootstrap.js.html %} 
-      <!--end-ext-lib-->
+      {% include javascript/ga/ga.js.html %} 
+      {% include javascript/crisp/crisp.js.html %} 
     <!--endjs-->
 
   </body>
