add goal1 wtih formspree and sweetalert2

--- a/templates/_includes/html/zee/hero2.html
+++ b/templates/_includes/html/zee/hero2.html
@@ -11,15 +11,15 @@
             Main heading title, nice
           </div>
         </h1>
-        
+
         <div class="hero2-sub-heading">
           AND A SUBTLE SUBTITLE, JUST ENOUGH TO CONVERT
         </div>
-        
+
         <div class="separator p-t-1"></div>
-        
+
         <div class="">
-          <button type="submit" class="hero2-button">Call to action</button>
+          <button type="submit" class="hero2-button js-main-cta">Call to action</button>
         </div>
         <div class="separator m-t-6 hidden-md-up">&nbsp;</div>
         <div class="separator m-t-4 hidden-sm-down">&nbsp;</div>
