--- a/templates/_includes/html/zee/navbar1.html
+++ b/templates/_includes/html/zee/navbar1.html
@@ -1,7 +1,7 @@
 
 <nav class='navbar1'>
-  <div class='container h-100'> 
-    <div class="navbar1__bar">  
+  <div class='container h-100'>
+    <div class="navbar1__bar">
       <div>
         <a href="#hero">&uarr; top</a>
       </div>
@@ -21,7 +21,7 @@
         <a href="#faq">faq</a>
       </div>
       <div>
-        <button class="navbar1__btn"> Github </button>
+        <button class="navbar1__btn js-main-cta"> Github </button>
       </div>
       <div class='hidden-sm-up'>
         <div>&nbsp;</div>
@@ -29,4 +29,3 @@
     </div>
   </div>
 </nav>
-
