--- a/templates/_layouts/default.html
+++ b/templates/_layouts/default.html
@@ -16,7 +16,7 @@
       {% include javascript/bootstrap/bootstrap.js.html %} 
       {% include javascript/ga/ga.js.html %} 
       {% include javascript/crisp/crisp.js.html %} 
-    <!--endjs-->
+		  {% include javascript/zee/goal1.js.html %}		<!--endjs-->
 
   </body>
 
